added data example

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 
       <p>This data is from <a href="http://data.un.org/Data.aspx?q=population&d=PopDiv&f=variableID%3a12">the UN's openly available data, which can be found here</a>.</p>
 
+      <p>If you want an example of returning the data as JSON, <a href="/api/vietnam">go here</a>.</p>
 
     </div>
 
